--- a/_0_eda_news.ipynb
+++ b/_0_eda_news.ipynb
@@ -485,14 +485,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                  date    percent\ntags                             \nВсе             453762  56.651206\nПолитика         40716   5.083305\nОбщество         35202   4.394894\nУкраина          22523   2.811948\nПроисшествия     19825   2.475108\n...                ...        ...\nМировой опыт         6   0.000749\nНацпроекты           6   0.000749\nВооружение           3   0.000375\nИнновации            1   0.000125\n69-я параллель       1   0.000125\n\n[94 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>percent</th>\n    </tr>\n    <tr>\n      <th>tags</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Все</th>\n      <td>453762</td>\n      <td>56.651206</td>\n    </tr>\n    <tr>\n      <th>Политика</th>\n      <td>40716</td>\n      <td>5.083305</td>\n    </tr>\n    <tr>\n      <th>Общество</th>\n      <td>35202</td>\n      <td>4.394894</td>\n    </tr>\n    <tr>\n      <th>Украина</th>\n      <td>22523</td>\n      <td>2.811948</td>\n    </tr>\n    <tr>\n      <th>Происшествия</th>\n      <td>19825</td>\n      <td>2.475108</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>Мировой опыт</th>\n      <td>6</td>\n      <td>0.000749</td>\n    </tr>\n    <tr>\n      <th>Нацпроекты</th>\n      <td>6</td>\n      <td>0.000749</td>\n    </tr>\n    <tr>\n      <th>Вооружение</th>\n      <td>3</td>\n      <td>0.000375</td>\n    </tr>\n    <tr>\n      <th>Инновации</th>\n      <td>1</td>\n      <td>0.000125</td>\n    </tr>\n    <tr>\n      <th>69-я параллель</th>\n      <td>1</td>\n      <td>0.000125</td>\n    </tr>\n  </tbody>\n</table>\n<p>94 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
