--- a/_0_eda_news.ipynb
+++ b/_0_eda_news.ipynb
@@ -208,10 +208,11 @@
    "cell_type": "markdown",
    "source": [
     "# TODO\n",
-    "## 0. Анализ датасета (группировки: tags, год, месяц)\n",
-    "## 1. Достать котировки по русским инструментам\n",
-    "### 1.1 Перевести в log change\n",
-    "### 1.2 Посчитать волатильность\n",
+    "## 0. Анализ датасета (группировки: tags, год, месяц) +\n",
+    "## 1. Достать котировки по русским инструментам +\n",
+    "### 1.1 Перевести в log change +\n",
+    "### 1.2 Посчитать волатильность +\n",
+    "#### TODO resume, у нас есть ключи у котировок - даты и недели, надо выделить те же ключи у новостей и смэппить данные\n",
     "## 2. Смэппить инструменты с новостями\n",
     "## 3. Обрезать нерелевантные новости\n",
     "## 4. Попробовать достать леммы через rubert tiny"
