switch to imoex data

--- a/_1_quotes.ipynb
+++ b/_1_quotes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "fdata = yf.download('SBER.ME', period='max', interval='1wk', start='2022-01-01', end='2022-01-31')"
+    "fdata = yf.download('IMOEX.ME', period='max', interval='1wk', start='2022-01-01', end='2022-01-31')"
    ],
    "metadata": {
     "collapsed": false,
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
-      "text/plain": "                  Open        High         Low       Close   Adj Close   \nDate                                                                     \n2022-01-03  296.100006  308.799988  287.420013  292.910004  292.910004  \\\n2022-01-10  296.989990  298.500000  249.199997  254.589996  254.589996   \n2022-01-17  262.149994  264.010010  221.029999  246.850006  246.850006   \n2022-01-24  246.509995  262.000000  226.000000  257.279999  257.279999   \n\n                Volume  \nDate                    \n2022-01-03   206254375  \n2022-01-10   744388692  \n2022-01-17  1234452560  \n2022-01-24  1288753880  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Open</th>\n      <th>High</th>\n      <th>Low</th>\n      <th>Close</th>\n      <th>Adj Close</th>\n      <th>Volume</th>\n    </tr>\n    <tr>\n      <th>Date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-01-03</th>\n      <td>296.100006</td>\n      <td>308.799988</td>\n      <td>287.420013</td>\n      <td>292.910004</td>\n      <td>292.910004</td>\n      <td>206254375</td>\n    </tr>\n    <tr>\n      <th>2022-01-10</th>\n      <td>296.989990</td>\n      <td>298.500000</td>\n      <td>249.199997</td>\n      <td>254.589996</td>\n      <td>254.589996</td>\n      <td>744388692</td>\n    </tr>\n    <tr>\n      <th>2022-01-17</th>\n      <td>262.149994</td>\n      <td>264.010010</td>\n      <td>221.029999</td>\n      <td>246.850006</td>\n      <td>246.850006</td>\n      <td>1234452560</td>\n    </tr>\n    <tr>\n      <th>2022-01-24</th>\n      <td>246.509995</td>\n      <td>262.000000</td>\n      <td>226.000000</td>\n      <td>257.279999</td>\n      <td>257.279999</td>\n      <td>1288753880</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                  Open        High         Low       Close   Adj Close   \nDate                                                                     \n2022-01-03  154.850006  158.940002  146.399994  147.860001  147.860001  \\\n2022-01-10  150.460007  152.470001  137.570007  143.179993  143.179993   \n2022-01-17  144.630005  148.929993  124.500000  147.000000  147.000000   \n2022-01-24  146.559998  147.800003  137.000000  144.009995  144.009995   \n\n              Volume  \nDate                  \n2022-01-03  28666998  \n2022-01-10  70583150  \n2022-01-17  93053920  \n2022-01-24  86616690  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Open</th>\n      <th>High</th>\n      <th>Low</th>\n      <th>Close</th>\n      <th>Adj Close</th>\n      <th>Volume</th>\n    </tr>\n    <tr>\n      <th>Date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-01-03</th>\n      <td>154.850006</td>\n      <td>158.940002</td>\n      <td>146.399994</td>\n      <td>147.860001</td>\n      <td>147.860001</td>\n      <td>28666998</td>\n    </tr>\n    <tr>\n      <th>2022-01-10</th>\n      <td>150.460007</td>\n      <td>152.470001</td>\n      <td>137.570007</td>\n      <td>143.179993</td>\n      <td>143.179993</td>\n      <td>70583150</td>\n    </tr>\n    <tr>\n      <th>2022-01-17</th>\n      <td>144.630005</td>\n      <td>148.929993</td>\n      <td>124.500000</td>\n      <td>147.000000</td>\n      <td>147.000000</td>\n      <td>93053920</td>\n    </tr>\n    <tr>\n      <th>2022-01-24</th>\n      <td>146.559998</td>\n      <td>147.800003</td>\n      <td>137.000000</td>\n      <td>144.009995</td>\n      <td>144.009995</td>\n      <td>86616690</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 240,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,9 +62,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 54,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   Open         High          Low        Close    Adj Close   \nDate                                                                          \n2022-01-03  3825.300049  3892.330078  3720.169922  3772.040039  3772.040039  \\\n2022-01-10  3798.429932  3841.719971  3512.030029  3596.979980  3596.979980   \n2022-01-17  3633.010010  3651.360107  3256.600098  3439.250000  3439.250000   \n2022-01-24  3426.189941  3534.399902  3158.459961  3488.600098  3488.600098   \n\n            Volume  \nDate                \n2022-01-03       0  \n2022-01-10       0  \n2022-01-17       0  \n2022-01-24       0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Open</th>\n      <th>High</th>\n      <th>Low</th>\n      <th>Close</th>\n      <th>Adj Close</th>\n      <th>Volume</th>\n    </tr>\n    <tr>\n      <th>Date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-01-03</th>\n      <td>3825.300049</td>\n      <td>3892.330078</td>\n      <td>3720.169922</td>\n      <td>3772.040039</td>\n      <td>3772.040039</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2022-01-10</th>\n      <td>3798.429932</td>\n      <td>3841.719971</td>\n      <td>3512.030029</td>\n      <td>3596.979980</td>\n      <td>3596.979980</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2022-01-17</th>\n      <td>3633.010010</td>\n      <td>3651.360107</td>\n      <td>3256.600098</td>\n      <td>3439.250000</td>\n      <td>3439.250000</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2022-01-24</th>\n      <td>3426.189941</td>\n      <td>3534.399902</td>\n      <td>3158.459961</td>\n      <td>3488.600098</td>\n      <td>3488.600098</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fdata"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -764,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -1678,7 +1690,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [],
+   "source": [
+    "# все тоже самое для MOEX, чтобы снизить размерность"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "imoex_df = yf.download(f'IMOEX.ME', period='max', interval='1d')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "imoex_df = imoex_df.reset_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Timestamp('2013-03-05 00:00:00')"
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imoex_df['Date'].min()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Timestamp('2023-05-05 00:00:00')"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imoex_df['Date'].max()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [],
+   "source": [
+    "imoex_df['log_price_spread'] = np.log(imoex_df['High']) - np.log(imoex_df['Low'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [],
+   "source": [
+    "imoex_df['log_ret'] = np.log(imoex_df['Close']) - np.log(imoex_df['Close'].shift(1))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [],
+   "source": [
+    "imoex_df['week'] = imoex_df['Date'].dt.isocalendar().week\n",
+    "imoex_df['yr'] = imoex_df['Date'].dt.year\n",
+    "imoex_df['week_yr'] = imoex_df['week'].astype(str) + '_' + imoex_df['yr'].astype(str)\n",
+    "week_vol_imoex_df = imoex_df[['week_yr', 'log_ret']].groupby('week_yr').agg({'log_ret': 'std'})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [],
+   "source": [
+    "week_vol_imoex_df = week_vol_imoex_df.reset_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "outputs": [],
+   "source": [
+    "imoex_df.to_excel('imoex_data/imoex_quotes.xlsx', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "outputs": [],
+   "source": [
+    "week_vol_imoex_df.to_excel('imoex_data/imoex_vol.xlsx', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "week_vol_dict = {}\n",
+    "for file in tqdm(files_list):\n",
+    "    current_df = pd.read_excel(file)\n",
+    "    current_df['week'] = current_df['Date'].dt.isocalendar().week\n",
+    "    current_df['yr'] = current_df['Date'].dt.year\n",
+    "    current_df['week_yr'] = current_df['week'].astype(str) + '_' + current_df['yr'].astype(str)\n",
+    "    week_vol_df = current_df[['week_yr', 'log_ret']].groupby('week_yr').agg({'log_ret': 'std'})  # count weekly volatility\n",
+    "    week_vol_dict[file.replace('data/', '').replace('.xlsx', '')] = week_vol_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "outputs": [],
    "source": [],
    "metadata": {
