encapsulating models in own files

--- a/_2_matching.ipynb
+++ b/_2_matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -1311,9 +1311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
-   "source": [],
+   "source": [
+    "imoex_filtered_df =  pd.read_excel('imoex_and_news_090523.xlsx')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1323,9 +1325,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          Date         Open         High          Low        Close   \n557 2017-04-07  2046.780029  2048.629883  2010.920044  2020.229980  \\\n293 2016-03-22  1905.760010  1916.270020  1888.589966  1903.469971   \n690 2017-10-18  2091.399902  2101.350098  2086.449951  2094.399902   \n604 2017-06-20  1850.380005  1870.560059  1846.699951  1857.959961   \n754 2018-01-24  2297.689941  2306.989990  2283.199951  2306.989990   \n\n       Adj Close  Volume  log_price_spread   log_ret  week    yr  week_yr   \n557  2020.229980       0          0.018579 -0.016914    14  2017  14_2017  \\\n293  1903.469971       0          0.014550 -0.000541    12  2016  12_2016   \n690  2094.399902       0          0.007116  0.000874    42  2017  42_2017   \n604  1857.959961       0          0.012838  0.004412    25  2017  25_2017   \n754  2306.989990       0          0.010366 -0.000702     4  2018   4_2018   \n\n                                                  news  \n557  [{'title': 'Число жертв теракта в\\xa0Лондоне у...  \n293  [{'title': 'Появилось видео после взрывов в\\xa...  \n690  [{'title': 'В Эстонии прошел черный дождь', 't...  \n604  [{'title': 'Кремль отказался гнаться за\\xa0Тра...  \n754  [{'title': 'Голый физрук из\\xa0США поиграл в\\x...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Date</th>\n      <th>Open</th>\n      <th>High</th>\n      <th>Low</th>\n      <th>Close</th>\n      <th>Adj Close</th>\n      <th>Volume</th>\n      <th>log_price_spread</th>\n      <th>log_ret</th>\n      <th>week</th>\n      <th>yr</th>\n      <th>week_yr</th>\n      <th>news</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>557</th>\n      <td>2017-04-07</td>\n      <td>2046.780029</td>\n      <td>2048.629883</td>\n      <td>2010.920044</td>\n      <td>2020.229980</td>\n      <td>2020.229980</td>\n      <td>0</td>\n      <td>0.018579</td>\n      <td>-0.016914</td>\n      <td>14</td>\n      <td>2017</td>\n      <td>14_2017</td>\n      <td>[{'title': 'Число жертв теракта в\\xa0Лондоне у...</td>\n    </tr>\n    <tr>\n      <th>293</th>\n      <td>2016-03-22</td>\n      <td>1905.760010</td>\n      <td>1916.270020</td>\n      <td>1888.589966</td>\n      <td>1903.469971</td>\n      <td>1903.469971</td>\n      <td>0</td>\n      <td>0.014550</td>\n      <td>-0.000541</td>\n      <td>12</td>\n      <td>2016</td>\n      <td>12_2016</td>\n      <td>[{'title': 'Появилось видео после взрывов в\\xa...</td>\n    </tr>\n    <tr>\n      <th>690</th>\n      <td>2017-10-18</td>\n      <td>2091.399902</td>\n      <td>2101.350098</td>\n      <td>2086.449951</td>\n      <td>2094.399902</td>\n      <td>2094.399902</td>\n      <td>0</td>\n      <td>0.007116</td>\n      <td>0.000874</td>\n      <td>42</td>\n      <td>2017</td>\n      <td>42_2017</td>\n      <td>[{'title': 'В Эстонии прошел черный дождь', 't...</td>\n    </tr>\n    <tr>\n      <th>604</th>\n      <td>2017-06-20</td>\n      <td>1850.380005</td>\n      <td>1870.560059</td>\n      <td>1846.699951</td>\n      <td>1857.959961</td>\n      <td>1857.959961</td>\n      <td>0</td>\n      <td>0.012838</td>\n      <td>0.004412</td>\n      <td>25</td>\n      <td>2017</td>\n      <td>25_2017</td>\n      <td>[{'title': 'Кремль отказался гнаться за\\xa0Тра...</td>\n    </tr>\n    <tr>\n      <th>754</th>\n      <td>2018-01-24</td>\n      <td>2297.689941</td>\n      <td>2306.989990</td>\n      <td>2283.199951</td>\n      <td>2306.989990</td>\n      <td>2306.989990</td>\n      <td>0</td>\n      <td>0.010366</td>\n      <td>-0.000702</td>\n      <td>4</td>\n      <td>2018</td>\n      <td>4_2018</td>\n      <td>[{'title': 'Голый физрук из\\xa0США поиграл в\\x...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imoex_filtered_df.sample(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [],
-   "source": [],
+   "source": [
+    "imoex_filtered_df.sample(5).to_excel('sample_news_findata.xlsx', index=False)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
