encapsulating models in own files

--- a/_0_eda_news.ipynb
+++ b/_0_eda_news.ipynb
@@ -676,20 +676,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                                                url   \n0        https://lenta.ru/news/1914/09/16/hungarnn/  \\\n1       https://lenta.ru/news/1914/09/16/lermontov/   \n2       https://lenta.ru/news/1914/09/17/nesteroff/   \n3        https://lenta.ru/news/1914/09/17/bulldogn/   \n4            https://lenta.ru/news/1914/09/18/zver/   \n...                                             ...   \n800970      https://lenta.ru/news/2019/12/14/shnur/   \n800971       https://lenta.ru/news/2019/12/14/dolg/   \n800972  https://lenta.ru/news/2019/12/14/dark_euro/   \n800973      https://lenta.ru/news/2019/12/14/meteo/   \n800974      https://lenta.ru/news/2019/12/14/olimp/   \n\n                                                    title   \n0       1914. Русские войска вступили в пределы Венгрии    \\\n1       1914. Празднование столетия М.Ю. Лермонтова от...   \n2                                1914. Das ist Nesteroff!   \n3                         1914. Бульдог-гонец под Льежем    \n4                1914. Под Люблином пойман швабский зверь   \n...                                                   ...   \n800970          Шнуров раскритиковал Гагарину на «Голосе»   \n800971  В России предложили изменить правила взыскания...   \n800972          В России назвали «черную дату» для Европы   \n800973        Россиянам пообещали аномально теплую погоду   \n800974  В конкурсе прогнозов на АПЛ разыграют 100 тыся...   \n\n                                                     text       topic   \n0       Бои у Сопоцкина и Друскеник закончились отступ...  Библиотека  \\\n1       Министерство народного просвещения, в виду про...  Библиотека   \n2       Штабс-капитан П. Н. Нестеров на днях, увидев в...  Библиотека   \n3       Фотограф-корреспондент Daily Mirror рассказыва...  Библиотека   \n4       Лица, приехавшие в Варшаву из Люблина, передаю...  Библиотека   \n...                                                   ...         ...   \n800970  Певец Сергей Шнуров раскритиковал свою коллегу...         NaN   \n800971  Министерство юстиции России предложило изменит...         NaN   \n800972  Испытание США ранее запрещенной Договором о ли...         NaN   \n800973  В ближайшие дни в европейской части России пог...         NaN   \n800974  Ведущие футбольные чемпионаты ушли на зимние к...         NaN   \n\n                     tags        date  \n0          Первая мировая  1914/09/16  \n1          Первая мировая  1914/09/16  \n2          Первая мировая  1914/09/17  \n3          Первая мировая  1914/09/17  \n4          Первая мировая  1914/09/18  \n...                   ...         ...  \n800970         ТВ и радио  2019/12/14  \n800971                Все  2019/12/14  \n800972           Политика  2019/12/14  \n800973           Общество  2019/12/14  \n800974  Английский футбол  2019/12/14  \n\n[800975 rows x 6 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>url</th>\n      <th>title</th>\n      <th>text</th>\n      <th>topic</th>\n      <th>tags</th>\n      <th>date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>https://lenta.ru/news/1914/09/16/hungarnn/</td>\n      <td>1914. Русские войска вступили в пределы Венгрии</td>\n      <td>Бои у Сопоцкина и Друскеник закончились отступ...</td>\n      <td>Библиотека</td>\n      <td>Первая мировая</td>\n      <td>1914/09/16</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>https://lenta.ru/news/1914/09/16/lermontov/</td>\n      <td>1914. Празднование столетия М.Ю. Лермонтова от...</td>\n      <td>Министерство народного просвещения, в виду про...</td>\n      <td>Библиотека</td>\n      <td>Первая мировая</td>\n      <td>1914/09/16</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>https://lenta.ru/news/1914/09/17/nesteroff/</td>\n      <td>1914. Das ist Nesteroff!</td>\n      <td>Штабс-капитан П. Н. Нестеров на днях, увидев в...</td>\n      <td>Библиотека</td>\n      <td>Первая мировая</td>\n      <td>1914/09/17</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>https://lenta.ru/news/1914/09/17/bulldogn/</td>\n      <td>1914. Бульдог-гонец под Льежем</td>\n      <td>Фотограф-корреспондент Daily Mirror рассказыва...</td>\n      <td>Библиотека</td>\n      <td>Первая мировая</td>\n      <td>1914/09/17</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>https://lenta.ru/news/1914/09/18/zver/</td>\n      <td>1914. Под Люблином пойман швабский зверь</td>\n      <td>Лица, приехавшие в Варшаву из Люблина, передаю...</td>\n      <td>Библиотека</td>\n      <td>Первая мировая</td>\n      <td>1914/09/18</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>800970</th>\n      <td>https://lenta.ru/news/2019/12/14/shnur/</td>\n      <td>Шнуров раскритиковал Гагарину на «Голосе»</td>\n      <td>Певец Сергей Шнуров раскритиковал свою коллегу...</td>\n      <td>NaN</td>\n      <td>ТВ и радио</td>\n      <td>2019/12/14</td>\n    </tr>\n    <tr>\n      <th>800971</th>\n      <td>https://lenta.ru/news/2019/12/14/dolg/</td>\n      <td>В России предложили изменить правила взыскания...</td>\n      <td>Министерство юстиции России предложило изменит...</td>\n      <td>NaN</td>\n      <td>Все</td>\n      <td>2019/12/14</td>\n    </tr>\n    <tr>\n      <th>800972</th>\n      <td>https://lenta.ru/news/2019/12/14/dark_euro/</td>\n      <td>В России назвали «черную дату» для Европы</td>\n      <td>Испытание США ранее запрещенной Договором о ли...</td>\n      <td>NaN</td>\n      <td>Политика</td>\n      <td>2019/12/14</td>\n    </tr>\n    <tr>\n      <th>800973</th>\n      <td>https://lenta.ru/news/2019/12/14/meteo/</td>\n      <td>Россиянам пообещали аномально теплую погоду</td>\n      <td>В ближайшие дни в европейской части России пог...</td>\n      <td>NaN</td>\n      <td>Общество</td>\n      <td>2019/12/14</td>\n    </tr>\n    <tr>\n      <th>800974</th>\n      <td>https://lenta.ru/news/2019/12/14/olimp/</td>\n      <td>В конкурсе прогнозов на АПЛ разыграют 100 тыся...</td>\n      <td>Ведущие футбольные чемпионаты ушли на зимние к...</td>\n      <td>NaN</td>\n      <td>Английский футбол</td>\n      <td>2019/12/14</td>\n    </tr>\n  </tbody>\n</table>\n<p>800975 rows × 6 columns</p>\n</div>"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 21,
+   "outputs": [],
    "source": [
-    "lenta_df"
+    "lenta_df['date_yr'] = lenta_df['date_yr'].astype(int)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "that_sample = lenta_df.loc[((lenta_df['title'].str.contains('евро', case=False, na=False))|(lenta_df['title'].str.contains('доллар', case=False, na=False)))&(lenta_df['title'].str.contains('курс', case=False, na=False))&(lenta_df['date_yr']>2014)].sample(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "that_sample.to_excel('курс_sample.xlsx', index=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -706,13 +724,42 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "that_sample = lenta_df.loc[(lenta_df['title'].str.contains('убыток', case=False, na=False))&(lenta_df['date_yr']>2014)].sample(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
      "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
+   "outputs": [],
+   "source": [
+    "that_sample.to_excel('убток_sample.xlsx', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "outputs": [],
    "source": [],
    "metadata": {
