--- a/_5_NN_upgrading.ipynb
+++ b/_5_NN_upgrading.ipynb
@@ -23,7 +23,8 @@
    "execution_count": 24,
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ],
    "metadata": {
     "collapsed": false,
@@ -36,9 +37,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
